--- a/index2.html
+++ b/index2.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  
 
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid"
@@ -277,6 +278,30 @@
                     tempor porta.</span></p>
 
                 <button onclick="readmore(this.id,'blog-data-3','blog-more-data-3')" id="blog3">Read more</button>
+
+              </div>
+            </div>
+
+          </div>
+          <div class="col-lg-4" data-aos="zoom-in-down" data-aos-easing="ease-out-cubic"
+          data-aos-duration="3000">
+            <div class="card" style="width: 20rem;">
+              <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcpC7fitgvtEH7APYi3sKdU2_chJJTHJuoQ&usqp=CAU"
+                class="card-img-top">
+              <div class="card-body">
+                <h5 class="card-body">Story of Malala Yusofzai</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et
+                  dictum interdum, nisi lorem egestas vitae scel<span id="blog-data-2">...</span><span
+                    id="blog-more-data-2" style=" display: none;">erisque enim ligula venenatis dolor. Maecenas nisl
+                    est, ultrices nec
+                    congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc
+                    sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc
+                    venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+                    venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh
+                    tempor porta.</span></p>
+
+                <button onclick="readmore(this.id,'blog-data-2','blog-more-data-2')" id="blog2">Read more</button>
 
               </div>
             </div>
